RESOLVED FIXED152187
Modern IDB: storage/indexeddb/key-type-array.html fails
https://bugs.webkit.org/show_bug.cgi?id=152187
Summary Modern IDB: storage/indexeddb/key-type-array.html fails
Brady Eidson
Reported 2015-12-11 14:00:29 PST
Modern IDB: storage/indexeddb/key-type-array.html fails This is because the "is valid" check we were performing on array keys was... invalid.
Attachments
Patch v1 (8.81 KB, patch)
2015-12-11 14:07 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2015-12-11 14:07:44 PST
Created attachment 267188 [details] Patch v1
Alex Christensen
Comment 2 2015-12-11 14:11:27 PST
Comment on attachment 267188 [details] Patch v1 r=me even though the TestExpectations change doesn't apply to trunk
Brady Eidson
Comment 3 2015-12-11 14:15:15 PST
(In reply to comment #2) > Comment on attachment 267188 [details] > Patch v1 > > r=me even though the TestExpectations change doesn't apply to trunk http://trac.webkit.org/changeset/193981 even though it doesn't apply to trunk. o_O
Note You need to log in before you can comment on or make changes to this bug.