Modern IDB: storage/indexeddb/key-type-array.html fails. https://bugs.webkit.org/show_bug.cgi?id=152187

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/client/IDBObjectStoreImpl.cpp:
(WebCore::IDBClient::IDBObjectStore::putOrAdd): Perform the correct validity check on array keys.

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/key-type-array-expected.txt:

Canonical link: https://commits.webkit.org/170308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193981 268f45cc-cd09-0410-ab3c-d52691b4dbfc